# NUMA-Intelligence-Predictive-Runtime-Telemetry-Platform

./: .gitignore  Dockerfile  PROJECT_REPORT.md  README.md  RUNNING.md  SOCIAL_MEDIA_KIT.md  docker-compose.yml  setup_db.sh
agents/runtime-agent/: CMakeLists.txt
agents/runtime-agent/src/: cpu_stats.hpp  grpc_client.cpp  grpc_client.hpp  logger.hpp  main.cpp  metrics.hpp  numa_bench.hpp  runtime.cpp  runtime.hpp
agents/rust-agent/: Cargo.toml  build.rs
agents/rust-agent/src/: collector.rs  main.rs  metrics.rs
dashboards/runtime-dashboard/: package-lock.json  package.json
dashboards/runtime-dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboards/runtime-dashboard/src/app/dashboard/: page.tsx
dashboards/runtime-dashboard/src/app/docs/: page.tsx
dashboards/runtime-dashboard/src/app/simulator/: page.tsx
dashboards/runtime-dashboard/src/components/: Footer.tsx  Navbar.tsx  ThemeProvider.tsx
databases/postgres/: docker-compose.yml  init.sql
docs/: architecture.md  deployment_notes.md
infrastructure/: start.sh
scripts/: install.ps1  install.sh
services/gateway/: package-lock.json  package.json
services/gateway/src/: server.js
